more work on collisions create different animation timers

--- a/examples/collisions.html
+++ b/examples/collisions.html
@@ -28,7 +28,7 @@
     import {Example} from '../dist/example.js'
     let example = new Example()
     example.attach(document.querySelector('#canvas'))
-    example.start()
+    example.start(this)
 </script>
 </body>
 </html>
