--- a/examples/collisions.html
+++ b/examples/collisions.html
@@ -11,18 +11,18 @@
             align-items: center;
             justify-content: center;
             /*border: 1px solid red;*/
-            min-height: 500px;
+            /*min-height: 500px;*/
         }
         canvas {
             border: 1px solid gray;
-            width: 1000px;
+            width: 1200px;
             image-rendering: pixelated;
         }
     </style>
 </head>
 <body>
 
-<canvas id="canvas" width="500" height="500"></canvas>
+<canvas id="canvas" width="600" height="600"></canvas>
 <script src="../dist/index.js"></script>
 <script type="module">
     import {Example} from '../dist/example.js'
