add the keyboard controlled paddle

--- a/examples/collisions.html
+++ b/examples/collisions.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<canvas id="canvas" width="600" height="600"></canvas>
+<canvas id="canvas" width="600" height="600" tabindex="0"></canvas>
 <script src="../dist/index.js"></script>
 <script type="module">
     import {Example} from '../dist/example.js'
