initial stab at the jumper

--- a/examples/pong.html
+++ b/examples/pong.html
@@ -25,8 +25,8 @@
 <canvas id="canvas" width="600" height="600" tabindex="0"></canvas>
 <script src="../dist/index.js"></script>
 <script type="module">
-    import {Example} from '../dist/example.js'
-    let example = new Example()
+    import {PongExample} from '../dist/pongExample.js'
+    let example = new PongExample()
     example.attach(document.querySelector('#canvas'))
     example.start(this)
 </script>
