--- a/examples/pong.html
+++ b/examples/pong.html
@@ -23,7 +23,8 @@
 <body>
 
 <canvas id="canvas" width="600" height="600" tabindex="0"></canvas>
-<script src="../dist/index.js"></script>
+<script src="../node_modules/jsfxr/riffwave.js"></script>
+<script src="../node_modules/jsfxr/sfxr.js"></script>
 <script type="module">
     import {PongExample} from '../dist/pongExample.js'
     let example = new PongExample()
