restructure to be cleaner

--- a/examples/anim.html
+++ b/examples/anim.html
@@ -7,9 +7,8 @@
     body {
       background-color: black;
       display: flex;
-      flex-direction:column;
-      align-items: center;
-      justify-content: center;
+      flex-direction:row;
+      flex-wrap: wrap;
     }
     canvas {
       border: 1px solid black;
