--- a/examples/anim.html
+++ b/examples/anim.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   <style type="text/css">
     body {
       background-color: black;
