--- a/examples/pong.html
+++ b/examples/pong.html
@@ -25,6 +25,21 @@
 <canvas id="canvas" width="600" height="600" tabindex="0"></canvas>
 <script src="../node_modules/jsfxr/riffwave.js"></script>
 <script src="../node_modules/jsfxr/sfxr.js"></script>
+<script type="importmap">
+{
+  "imports": {
+    "josh_js_util": "../node_modules/josh_js_util/dist/index.js"
+  }
+}
+</script>
+<script type="module">
+    if (HTMLScriptElement.supports && HTMLScriptElement.supports('importmap')) {
+        console.log('Your browser supports import maps.');
+    } else {
+        console.log("no import map support")
+    }
+</script>
+
 <script type="module">
     import {PongExample} from '../dist/pongExample.js'
     let example = new PongExample()
