fix more imports

--- a/examples/anim.html
+++ b/examples/anim.html
@@ -38,7 +38,7 @@
   }
 </script>
 <script type="module">
-  import {AnimExample} from '../dist/animExample.js'
+  import {AnimExample} from '../dist/anim/animExample.js'
   let example = new AnimExample()
   example.start()
 </script>
