--- a/examples/jumper.html
+++ b/examples/jumper.html
@@ -39,10 +39,10 @@
 </script>
 <script src="../dist/index.js"></script>
 <script type="module">
-  import {JumpExample} from '../dist/jumpExample.js'
-  let example = new JumpExample()
+  import {Jump} from '../dist/jump/jump.js'
+  let example = new Jump()
   example.attach(document.querySelector('#canvas'))
-  example.start(this)
+  example.start()
 </script>
 </body>
 </html>
