move to just build beepbox

--- a/examples/pong.html
+++ b/examples/pong.html
@@ -25,7 +25,7 @@
 <canvas id="canvas" width="600" height="600" tabindex="0"></canvas>
 <script src="../node_modules/jsfxr/riffwave.js"></script>
 <script src="../node_modules/jsfxr/sfxr.js"></script>
-<script src="../vendor/beepbox/website/beepbox_synth.js"></script>
+<script src="../vendor/beepbox_synth.js"></script>
 <script type="importmap">
 {
   "imports": {
