--- a/examples/pong.html
+++ b/examples/pong.html
@@ -19,6 +19,14 @@
             image-rendering: pixelated;
         }
     </style>
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+    <script type="importmap">
+{
+  "imports": {
+    "josh_js_util": "https://ga.jspm.io/npm:josh_js_util@0.1.8/dist/index.js"
+  }
+}
+</script>
 </head>
 <body>
 
@@ -26,20 +34,13 @@
 <script src="../node_modules/jsfxr/riffwave.js"></script>
 <script src="../node_modules/jsfxr/sfxr.js"></script>
 <script src="../vendor/beepbox_synth.js"></script>
-<script type="importmap">
-{
-  "imports": {
-    "josh_js_util": "../node_modules/josh_js_util/dist/index.js"
-  }
-}
-</script>
-<script type="module">
-    if (HTMLScriptElement.supports && HTMLScriptElement.supports('importmap')) {
-        console.log('Your browser supports import maps.');
-    } else {
-        console.log("no import map support")
-    }
-</script>
+<!--<script type="module">-->
+<!--    if (HTMLScriptElement.supports && HTMLScriptElement.supports('importmap')) {-->
+<!--        console.log('Your browser supports import maps.');-->
+<!--    } else {-->
+<!--        console.log("no import map support")-->
+<!--    }-->
+<!--</script>-->
 
 <script type="module">
     import {Pong} from '../dist/pong/pong.js'
